javascript-navigation changes

--- a/HTML/home.html
+++ b/HTML/home.html
@@ -7,20 +7,16 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="/CSS/home.css">
     <link rel="stylesheet" href="/CSS/navbar.css">
-    <link rel="stylesheet" href="/CSS/navbar&Media.css">
+    <script src="/JavaScript/nav.js"></script>
     <title>EV Revolution</title>
 </head>
+
 <body>
         <div class="dropdown">
             <button class="dropbtn"><i style="color: #2a4e07;" class="fa fa-bars"></i>
             </button>
-            <div class="dropdown-content">
-              <a href="#">Home</a>
-              <a href="#l">Why EV</a>
-              <a href="#">Petrol Vehicles</a>
-              <a href="#">Diesel Vehicles</a>
-              <a href="#">Climate impact</a>
-              <a href="#">About us</a>
+            <div class="dropdown-content" id="ham-menu">
+         
             </div>
           </div> 
     <div class="header">
@@ -29,15 +25,8 @@
             <div class="logo">
                 <img src="/HomePage-Images/EV Revolution.svg" alt="logo">
             </div>  
-            <nav>
-                <ul>
-                    <li><a href="#">Home</a></li>
-                    <li><a href="#">Why EV</a></li>
-                    <li><a href="#">Petrol Vehicle</a></li>
-                    <li><a href="#">Diesel Vehicle</a></li>
-                    <li><a href="#">Climate Impact</a></li>
-                    <li><a href="#">About Us</a></li>
-                </ul>
+            <nav id="menu">
+            
             </nav> 
         </div>
  
