page-secong complition

--- a/HTML/shared-hamburger-nav.html
+++ b/HTML/shared-hamburger-nav.html
@@ -1,5 +1,5 @@
-<a href="#">Home</a>
-<a href="#">Why EV</a>
+<a href="/HTML/home.html">Home</a>
+<a href="/HTML/whyev.html">Why EV</a>
 <a href="#">Petrol Vehicles</a>
 <a href="#">Diesel Vehicles</a>
 <a href="#">Climate impact</a>
