--- a/HTML/whyev.html
+++ b/HTML/whyev.html
@@ -4,10 +4,140 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Why EV</title>
+    <title>EVRevolution-Why EV</title>
     <link rel="stylesheet" href="/CSS/whyEV.css">
+    <link rel="stylesheet" href="/CSS/logo.css">
+    <link rel="stylesheet" href="/CSS/navbar.css">
+    <link rel="stylesheet" href="/CSS/video.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <script src="/JavaScript/nav.js"></script>
 </head>
 <body>
-    
+
+    <div class="main-container">
+        <div class="navbar">
+            <div class="logo">
+                <img src="/HomePage-Images/EV Revolution.svg" alt="logo">
+            </div>  
+            <nav id="menu"></nav> 
+        </div>
+        <div class="dropdown">
+            <button class="dropbtn"><i style="color: #2a4e07;" class="fa fa-bars"></i>
+            </button>
+            <div class="dropdown-content" id="ham-menu"></div>
+          </div>
+        <div class="main-header">
+            <h1>Why to choose Electric Vehicles</h1>
+            <img src="/WhyEV-images/Will-Electric-Vehicles-be-cheaper-in-the-near-future.png" alt="">
+            <h2>Six Reason's to go electric</h2>
+        </div>
+        <div class="find-out">
+           <div class="grid-1">
+            <h2>1. SLASH GREENHOUSE GAS EMISSIONS</h2>
+            <p>EVs emit 80% less CO2 than an equivalent petrol vehicle when being driven in
+                 New Zealand because electricity generated here is typically at least 80% 
+                 renewable (mostly from hydro, geothermal and wind).</p>
+           </div>
+           <div class="grid-2">
+            <h2>2. LOWER LIFECYCLE EMISSIONS</h2>
+            <p>Battery EVs emit 60% fewer climate-changing emissions over their full 
+                life cycle than petrol vehicles, even when you take into account raw material
+                 extraction, battery manufacture, vehicle manufacture and shipping.</p>
+           </div>
+           <div class="grid-3">
+            <h2>3. NO MORE PETROL STATION VISITS</h2>
+            <p>Charging at home is the most convenient way to keep your vehicle ready to go.
+                 For longer trips, there are public chargers at least every 75km on most of 
+                 the state highway network. You’re almost never too far from your next charge, and 
+                 the charging network is growing all the time, with a focus on covering major routes 
+                 and increasing the numbers available.</p>
+           </div>
+           <div class="grid-4">
+            <h2>4. CHEAP TO RUN</h2>
+            <p>Charging at home off-peak is like buying petrol at around 40c/litre, 
+                depending on your electricity retailer. And battery EV motors have so few
+                 moving parts there is less to maintain or go wrong.</p>
+            </div>
+            <div class="grid-5">
+                <h2>5. A ZIPPY, QUIET RIDE</h2>
+                <p>With no gears to work through, an EV is able to apply full power as soon 
+                    as you touch the accelerator – and there’s no engine noise. They’re great
+                     hill climbers and regenerative braking means they recharge going downhill.</p>
+            </div>
+            <div class="grid-6">
+                <h2>6. PLUG INTO ANY POWER POINT</h2>
+                <p>Charge your EV inside or outside, in any weather, so long as all equipment 
+                    is designed for use in New Zealand and for the conditions in which it will be used.</p>
+            </div>
+        </div>
+        <div class="video">
+            <h1 style="text-transform: uppercase;">Hear it from an ev owner</h1>
+            <iframe class="responsive-iframe" src="https://www.youtube.com/embed/OrWzWtTbMQg" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+        </div>
+        <div class="graph">
+            <div class="grid-1">
+                <img src="/WhyEV-images/NZ_Energy_Emissions_Small_ea6f443d8c.gif">
+            </div>
+            <div class="grid-2">
+                <img src="/WhyEV-images/graph_Ev1.jpeg.crdownload" alt="">
+            </div>
+            <div class="grid-1">
+                <img src="/WhyEV-images/graph4.jpg"">
+            </div>
+            <div class="grid-2">
+                <img src="/WhyEV-images/graph-3.jpeg.crdownload" alt="">
+            </div>
+        </div>
+        <div class="title">
+            <div class="page-bottom">
+                <i class="fa fa-quote-left"></i>
+                <h1>USING TRANSPORT FUELLED BY RENEWABLE ELECTRICITY IS ONE OF NEW ZEALAND’S MOST
+                     EFFECTIVE WAYS TO SLASH GREENHOUSE GAS EMISSIONS. <br></h1>
+                     <h1>NZ Transport Minister stands by EV policy despite limited availability in current NZ market</h1>
+            </div>
+        </div>
+        <div class="video">
+           
+            <iframe class="responsive-iframe" src="https://www.youtube.com/embed/-vqhvdWplyM?start=10" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+        </div>
+    </div>
+    <div class="footer">
+        <div class="container">
+            <div class="row">
+                <div class="footer-col-1">
+                    <h3>Download our App</h3>
+                    <p>Download App for Android and ios mobile phone.</p>
+                    <div class="app-logo">
+                        <a href="https://play.google.com/store" target="blank"><img src="/HomePage-Images/androidlogo.png"></a>
+                         <a href="https://www.apple.com/nz/app-store/" target="blank"><img src="/HomePage-Images/IOS-APP.svg"></a>
+                 </div>
+                </div>
+                <div class="footer-col-2">
+                 <img src="/HomePage-Images/footerLOGO.png" alt="">
+                 <p>Thanks for visiting us today. See you again.</p>
+             </div>
+             <div class="footer-col-3">
+                 <h3>Useful links</h3>
+                 <ul>
+                     <li><a href="https://driveelectric.org.nz/individuals/ev-models-and-where-to-buy/" target="blank">Electric Vehicles</a></li>
+                     <li><a href="https://www.nzta.govt.nz/vehicles/clean-car-programme/clean-car-discount/" target="blank">Goverment Rebate</a></li>
+                     <li><a href="https://genless.govt.nz/for-everyone/on-the-move/consider-electric-vehicles/why-buy-an-ev/?gclid=CjwKCAjwiY6MBhBqEiwARFSCPvXzLgKRGMYUXRllaV7OZaZcixvj_Me2bMCu1vg-0P8pDXwReReEnhoC_p0QAvD_BwE" target="blank">EV Benifits</a></li>
+                     <li><a href="https://insideevs.com/car-lists/electric-trucks/" target="blank">Electric Trucks</a></li>
+                 </ul>
+             </div>
+             <div class="footer-col-4">
+                 <h3>Follow us</h3>
+                 <ul>
+                     <li><a href="https://www.facebook.com/" target="blank">Facebook</a></li>
+                     <li><a href="https://twitter.com/?lang=en" target="blank">Twiter</a></li>
+                     <li><a href="https://www.instagram.com/" target="blank">Instagram</a></li>
+                     <li><a href="https://www.youtube.com/" target="blank">Youtube</a></li>
+                 </ul>
+             </div>
+            </div>
+            <hr>
+            <p class="copyright">&#9400; Copyright 2021-This is Student Project by Harpreet Singh</p>
+        </div>
+    </div>
 </body>
 </html>
