--- a/HTML/shared-nav.html
+++ b/HTML/shared-nav.html
@@ -1,6 +1,6 @@
 <ul>
-    <li><a href="#">Home</a></li>
-    <li><a href="#">Why EV</a></li>
+    <li><a href="/HTML/home.html">Home</a></li>
+    <li><a href="/HTML/whyev.html">Why EV</a></li>
     <li><a href="#">Petrol Vehicle</a></li>
     <li><a href="#">Diesel Vehicle</a></li>
     <li><a href="#">Climate Impact</a></li>
