--- a/HTML/home.html
+++ b/HTML/home.html
@@ -20,7 +20,7 @@
     <div class="container">
         <div class="navbar">
             <div class="logo">
-                <img src="/HomePage-Images/EV Revolution.svg" alt="logo">
+                <a href="/HTML/home.html"><img src="/HomePage-Images/EV Revolution.svg" alt="logo"></a>
             </div>  
             <nav id="menu"></nav>    
         </div>
