--- a/HTML/whyev.html
+++ b/HTML/whyev.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="/CSS/logo.css">
     <link rel="stylesheet" href="/CSS/navbar.css">
     <link rel="stylesheet" href="/CSS/video.css">
+    <link rel="stylesheet" href="/CSS/footer.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <script src="/JavaScript/nav.js"></script>
 </head>
@@ -17,7 +18,7 @@
     <div class="main-container">
         <div class="navbar">
             <div class="logo">
-                <img src="/HomePage-Images/EV Revolution.svg" alt="logo">
+                <a href="/HTML/home.html"><img src="/HomePage-Images/EV Revolution.svg" alt="logo"></a>
             </div>  
             <nav id="menu"></nav> 
         </div>
@@ -27,52 +28,7 @@
             <div class="dropdown-content" id="ham-menu"></div>
           </div>
         <div class="main-header">
-            <h1>Why to choose Electric Vehicles</h1>
             <img src="/WhyEV-images/Will-Electric-Vehicles-be-cheaper-in-the-near-future.png" alt="">
-            <h2>Six Reason's to go electric</h2>
-        </div>
-        <div class="find-out">
-           <div class="grid-1">
-            <h2>1. SLASH GREENHOUSE GAS EMISSIONS</h2>
-            <p>EVs emit 80% less CO2 than an equivalent petrol vehicle when being driven in
-                 New Zealand because electricity generated here is typically at least 80% 
-                 renewable (mostly from hydro, geothermal and wind).</p>
-           </div>
-           <div class="grid-2">
-            <h2>2. LOWER LIFECYCLE EMISSIONS</h2>
-            <p>Battery EVs emit 60% fewer climate-changing emissions over their full 
-                life cycle than petrol vehicles, even when you take into account raw material
-                 extraction, battery manufacture, vehicle manufacture and shipping.</p>
-           </div>
-           <div class="grid-3">
-            <h2>3. NO MORE PETROL STATION VISITS</h2>
-            <p>Charging at home is the most convenient way to keep your vehicle ready to go.
-                 For longer trips, there are public chargers at least every 75km on most of 
-                 the state highway network. You’re almost never too far from your next charge, and 
-                 the charging network is growing all the time, with a focus on covering major routes 
-                 and increasing the numbers available.</p>
-           </div>
-           <div class="grid-4">
-            <h2>4. CHEAP TO RUN</h2>
-            <p>Charging at home off-peak is like buying petrol at around 40c/litre, 
-                depending on your electricity retailer. And battery EV motors have so few
-                 moving parts there is less to maintain or go wrong.</p>
-            </div>
-            <div class="grid-5">
-                <h2>5. A ZIPPY, QUIET RIDE</h2>
-                <p>With no gears to work through, an EV is able to apply full power as soon 
-                    as you touch the accelerator – and there’s no engine noise. They’re great
-                     hill climbers and regenerative braking means they recharge going downhill.</p>
-            </div>
-            <div class="grid-6">
-                <h2>6. PLUG INTO ANY POWER POINT</h2>
-                <p>Charge your EV inside or outside, in any weather, so long as all equipment 
-                    is designed for use in New Zealand and for the conditions in which it will be used.</p>
-            </div>
-        </div>
-        <div class="video">
-            <h1 style="text-transform: uppercase;">Hear it from an ev owner</h1>
-            <iframe class="responsive-iframe" src="https://www.youtube.com/embed/OrWzWtTbMQg" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
         </div>
         <div class="graph">
             <div class="grid-1">
@@ -87,6 +43,50 @@
             <div class="grid-2">
                 <img src="/WhyEV-images/graph-3.jpeg.crdownload" alt="">
             </div>
+        </div>
+        <div class="why-ev"><h1>Why to choose Electric Vehicles</h1></div>
+        <div class="find-out">         
+            <div class="grid-1">
+             <h2>1. SLASH GREENHOUSE GAS EMISSIONS</h2>
+             <p>EVs emit 80% less CO2 than an equivalent petrol vehicle when being driven in
+                  New Zealand because electricity generated here is typically at least 80% 
+                  renewable (mostly from hydro, geothermal and wind).</p>
+            </div>
+            <div class="grid-2">
+             <h2>2. LOWER LIFECYCLE EMISSIONS</h2>
+             <p>Battery EVs emit 60% fewer climate-changing emissions over their full 
+                 life cycle than petrol vehicles, even when you take into account raw material
+                  extraction, battery manufacture, vehicle manufacture and shipping.</p>
+            </div>
+            <div class="grid-3">
+             <h2>3. NO MORE PETROL STATION VISITS</h2>
+             <p>Charging at home is the most convenient way to keep your vehicle ready to go.
+                  For longer trips, there are public chargers at least every 75km on most of 
+                  the state highway network. You’re almost never too far from your next charge, and 
+                  the charging network is growing all the time, with a focus on covering major routes 
+                  and increasing the numbers available.</p>
+            </div>
+            <div class="grid-4">
+             <h2>4. CHEAP TO RUN</h2>
+             <p>Charging at home off-peak is like buying petrol at around 40c/litre, 
+                 depending on your electricity retailer. And battery EV motors have so few
+                  moving parts there is less to maintain or go wrong.</p>
+             </div>
+             <div class="grid-5">
+                 <h2>5. A ZIPPY, QUIET RIDE</h2>
+                 <p>With no gears to work through, an EV is able to apply full power as soon 
+                     as you touch the accelerator – and there’s no engine noise. They’re great
+                      hill climbers and regenerative braking means they recharge going downhill.</p>
+             </div>
+             <div class="grid-6">
+                 <h2>6. PLUG INTO ANY POWER POINT</h2>
+                 <p>Charge your EV inside or outside, in any weather, so long as all equipment 
+                     is designed for use in New Zealand and for the conditions in which it will be used.</p>
+             </div>
+         </div>
+        <div class="video">
+            <h1 style="text-transform: uppercase;">Let's Hear it from an ev owner</h1>
+            <iframe class="responsive-iframe" src="https://www.youtube.com/embed/OrWzWtTbMQg" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
         </div>
         <div class="title">
             <div class="page-bottom">
