--- a/HTML/home.html
+++ b/HTML/home.html
@@ -5,17 +5,16 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-    <link rel="stylesheet" href="/CSS/home.css">
-    <link rel="stylesheet" href="/CSS/navbar.css">
-    <link rel="stylesheet" href="/CSS/logo.css">
-    <link rel="stylesheet" href="/CSS/video.css">
-    <link rel="stylesheet" href="/CSS/footer.css">
+    <link rel="stylesheet" href="/CSS/Home CSS/home.css">
+    <link rel="stylesheet" href="/CSS/Navigation CSS/navbar.css">
+    <link rel="stylesheet" href="/CSS/Logo CSS/logo.css">
+    <link rel="stylesheet" href="/CSS/Video Css/video.css">
+    <link rel="stylesheet" href="/CSS/Footer CSS/footer.css">
     <script src="/JavaScript/nav.js"></script>
     <title>EV Revolution</title>
 </head>
 
 <body>
-     
     <div class="header">
     <div class="container">
         <div class="navbar">
@@ -152,7 +151,14 @@
                                </div>
                                <div class="footer-col-2">
                                 <img src="/HomePage-Images/footerLOGO.png" alt="">
-                                <p>Thanks for visiting us today. See you again.</p>
+                                <ul>
+                                    <li><a href="/HTML/home.html">Home</a></li>
+                                    <li><a href="/HTML/whyev.html">Why EV</a></li>
+                                    <li><a href="#">Petrol</a></li>
+                                    <li><a href="#">Diesel</a></li>
+                                    <li><a href="#">Climate Impact</a></li>
+                                    <li><a href="#">About us</a></li>
+                                </ul>
                             </div>
                             <div class="footer-col-3">
                                 <h3>Useful links</h3>
