Final-page2"I hope"

--- a/HTML/whyev.html
+++ b/HTML/whyev.html
@@ -28,12 +28,18 @@
             <div class="dropdown-content" id="ham-menu"></div>
           </div>
         <div class="main-header">
-            <h1>Electric vehicles (EVs) are vehicles that run on electricity and which can be plugged 
-                in to recharge. They can be powered solely by electric batteries, known as pure electric
-                 vehicles, or a combination of batteries and a conventional engine, called plug-in hybrid
-                  electric vehicles.</h1>
-            <img src="/WhyEV-images/Will-Electric-Vehicles-be-cheaper-in-the-near-future.png" alt="">
-   
+                  <div class="image-grid">
+                      <div class="first-img-grid">
+                        <img src="/WhyEV-images/Ev-inside-removebg-preview.png" alt="">
+                      </div>
+                      <div class="sec-img-grid">
+                        <h1>Electric vehicles (EVs) are vehicles that run on electricity and which can be plugged 
+                            in to recharge. They can be powered solely by electric batteries, known as pure electric
+                             vehicles, or a combination of batteries and a conventional engine, called plug-in hybrid
+                              electric vehicles.</h1>
+                      </div>
+                  </div>
+                  <h1>Let's have a look at some statistics we have from around the world.</h1>
         </div>
         <div class="graph">
             <div class="grid-1">
@@ -49,7 +55,12 @@
                 <img src="/WhyEV-images/graph-3.jpeg.crdownload" alt="">
             </div>
         </div>
-        <div class="why-ev"><h1>Why to choose Electric Vehicles</h1></div>
+        <div class="why-ev">
+            <h1>Why to choose Electric Vehicles</h1>
+            <div class="tesla-img">
+                <img src="/WhyEV-images/tesla-nice-removebg-preview.png" alt="">
+            </div>
+        </div>
         <div class="find-out">         
             <div class="grid-1">
              <h2>1. SLASH GREENHOUSE GAS EMISSIONS</h2>
@@ -138,7 +149,14 @@
                 </div>
                 <div class="footer-col-2">
                  <img src="/HomePage-Images/footerLOGO.png" alt="">
-                 <p>Thanks for visiting us today. See you again.</p>
+                 <ul>
+                    <li><a href="/HTML/home.html">Home</a></li>
+                    <li><a href="/HTML/whyev.html">Why EV</a></li>
+                    <li><a href="#">Petrol</a></li>
+                    <li><a href="#">Diesel</a></li>
+                    <li><a href="#">Climate Impact</a></li>
+                    <li><a href="#">About us</a></li>
+                </ul>
              </div>
              <div class="footer-col-3">
                  <h3>Useful links</h3>
