--- a/HTML/SharedMenu/shared-nav.html
+++ b/HTML/SharedMenu/shared-nav.html
@@ -1,8 +1,8 @@
 <ul>
     <li><a href="/HTML/home.html">Home</a></li>
     <li><a href="/HTML/whyev.html">Why EV</a></li>
-    <li><a href="#">Petrol Vehicle</a></li>
-    <li><a href="#">Diesel Vehicle</a></li>
+    <li><a href="/HTML/petrol&Diesel.html">Petrol & Diesel</a></li>
     <li><a href="#">Climate Impact</a></li>
+    <li><a href="#">News</a></li>
     <li><a href="#">About Us</a></li>
 </ul>
