--- a/HTML/whyev.html
+++ b/HTML/whyev.html
@@ -18,7 +18,7 @@
     <div class="main-container">
         <div class="navbar">
             <div class="logo">
-                <a href="/HTML/home.html"><img src="/HomePage-Images/EV Revolution.svg" alt="logo"></a>
+                <a href="/HTML/home.html"><img src="/All-Images/HomePage-Images/EV Revolution.svg" alt="logo"></a>
             </div>  
             <nav id="menu"></nav> 
         </div>
@@ -30,7 +30,7 @@
         <div class="main-header">
                   <div class="image-grid">
                       <div class="first-img-grid">
-                        <img src="/WhyEV-images/Ev-inside-removebg-preview.png" alt="">
+                        <img src="/All-images/WhyEV-images/Ev-inside-removebg-preview.png" alt="">
                       </div>
                       <div class="sec-img-grid">
                         <h1>Electric vehicles (EVs) are vehicles that run on electricity and which can be plugged 
@@ -43,22 +43,22 @@
         </div>
         <div class="graph">
             <div class="grid-1">
-                <img src="/WhyEV-images/NZ_Energy_Emissions_Small_ea6f443d8c.gif">
+                <img src="/All-images//WhyEV-images/NZ_Energy_Emissions_Small_ea6f443d8c.gif">
             </div>
             <div class="grid-2">
-                <img src="/WhyEV-images/graph_Ev1.jpeg.crdownload" alt="">
+                <img src="/All-images//WhyEV-images/graph_Ev1.jpeg.crdownload" alt="">
             </div>
             <div class="grid-4">
-                <img src="/WhyEV-images/graph4.jpg"">
+                <img src="/All-images//WhyEV-images/graph4.jpg"">
             </div>
             <div class="grid-4">
-                <img src="/WhyEV-images/graph-3.jpeg.crdownload" alt="">
+                <img src="/All-images//WhyEV-images/graph-3.jpeg.crdownload" alt="">
             </div>
         </div>
         <div class="why-ev">
             <h1>Why to choose Electric Vehicles</h1>
             <div class="tesla-img">
-                <img src="/WhyEV-images/tesla-nice-removebg-preview.png" alt="">
+                <img src="/All-images//WhyEV-images/tesla-nice-removebg-preview.png" alt="">
             </div>
         </div>
         <div class="find-out">         
@@ -103,7 +103,12 @@
          <div class="page-bottom-grid">
              <div class="grid-part-1">
                 <i class="fa fa-quote-left"></i>
-                <h1 style="text-transform: uppercase;">Let's Hear it from an ev owner, Who is based in NZ and wants to share few words about her experience about her first Elctric Car.</h1>
+                <h1>Let's Hear it from an ev owner, Who is based in NZ and wants to
+                     share few words about her experience about her first Elctric Car. However Fluctuations in gas prices 
+                     can often shift your priorities to focus on operating costs, and regulations are requiring progressive 
+                     increases in fuel economy for new vehicles, encouraging the development of thrifty cars and alternative 
+                     powertrains. As a result, hybrid, plug-in, and pure-electric cars are showing up in almost all vehicle 
+                     categories, cutting energy costs and reducing petroleum.</h1>
                 
              </div>
              <div class="grid-part-2">
@@ -143,12 +148,12 @@
                     <h3>Download our App</h3>
                     <p>Download App for Android and ios mobile phone.</p>
                     <div class="app-logo">
-                        <a href="https://play.google.com/store" target="blank"><img src="/HomePage-Images/androidlogo.png"></a>
-                         <a href="https://www.apple.com/nz/app-store/" target="blank"><img src="/HomePage-Images/IOS-APP.svg"></a>
+                        <a href="https://play.google.com/store" target="blank"><img src="/All-images//HomePage-Images/androidlogo.png"></a>
+                         <a href="https://www.apple.com/nz/app-store/" target="blank"><img src="/All-images//HomePage-Images/IOS-APP.svg"></a>
                  </div>
                 </div>
                 <div class="footer-col-2">
-                 <img src="/HomePage-Images/footerLOGO.png" alt="">
+                 <img src="/All-images//HomePage-Images/footerLOGO.png" alt="">
                  <ul>
                     <li><a href="/HTML/home.html">Home</a></li>
                     <li><a href="/HTML/whyev.html">Why EV</a></li>
