--- a/HTML/SharedMenu/shared-hamburger-nav.html
+++ b/HTML/SharedMenu/shared-hamburger-nav.html
@@ -1,6 +1,6 @@
 <a href="/HTML/home.html">Home</a>
 <a href="/HTML/whyev.html">Why EV</a>
 <a href="/HTML/petrol&Diesel.html">Petrol & Diesel</a>
-<a href="#">Climate impact</a>
+<a href="/HTML/climate-impact.html">Climate impact</a>
 <a href="#">News</a>
 <a href="#">About us</a>
