--- a/HTML/SharedMenu/shared-nav.html
+++ b/HTML/SharedMenu/shared-nav.html
@@ -2,7 +2,7 @@
     <li><a href="/HTML/home.html">Home</a></li>
     <li><a href="/HTML/whyev.html">Why EV</a></li>
     <li><a href="/HTML/petrol&Diesel.html">Petrol & Diesel</a></li>
-    <li><a href="#">Climate Impact</a></li>
+    <li><a href="/HTML/climate-impact.html">Climate Impact</a></li>
     <li><a href="#">News</a></li>
     <li><a href="#">About Us</a></li>
 </ul>
