--- a/HTML/petrol&Diesel.html
+++ b/HTML/petrol&Diesel.html
@@ -165,8 +165,8 @@
                  <ul>
                     <li><a href="/HTML/home.html">Home</a></li>
                     <li><a href="/HTML/whyev.html">Why EV</a></li>
-                    <li><a href="#">Petrol&Diesel</a></li>
-                    <li><a href="#">Climate Impact</a></li>
+                    <li><a href="/HTML/petrol&Diesel.html">Petrol&Diesel</a></li>
+                    <li><a href="/HTML/climate-impact.html">Climate Impact</a></li>
                     <li><a href="#">News</a></li>
                     <li><a href="#">About us</a></li>
                 </ul>
