Page-4 Saving chnages

--- a/HTML/climate-impact.html
+++ b/HTML/climate-impact.html
@@ -44,6 +44,100 @@
    <div class="video">
     <iframe class="responsive-iframe" src="https://www.youtube.com/embed/K9m9WDxmSN8" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
    </div>
-</div>
+   <div class="benifits-para">
+       <h1>Benefits Of Electrifying Transportation</h1>
+       <p>Switching from a gas-powered car to an electric vehicle has huge environmental and public health
+            benefits. A vehicle running only on electricity has zero tail-pipe emissions. Even if you account
+             for the emissions associated with producing the electricity to charge them, electric vehicles
+             charged with electricity in New England produce far fewer greenhouse gas emissions than vehicles
+              powered by internal combustion engines.The Union of Concerned Scientists has done the math and has 
+              a great EV Emissions Tool on its website. You can plug in your zipcode and any make and model of
+               EV to find out what emissions it would be responsible for, per mile driven.</p>
+               <img src="/All-Images/Climate-impact-images/Carbon-footprint-transport.png" alt="photo">
+               <p>In addition to substantially reducing greenhouse gas emissions, electric vehicles significantly cut
+                    down on the pollutants released by gas-powered cars that cause so many public health problems. <br> <br>
+                    <img src="/All-Images/Climate-impact-images/Carbon-footprint-for-a-NZ-household-all-blue.png" alt="">
+                In sum, the benefits of electric vehicles are huge: we cannot meet our climate goals without them and 
+                they are crucial to bettering our public health. Though our Drive Green program focuses on passenger
+                 vehicles, we are strong proponents of electrifying everything, particularly public transportation.</p>
+                 <div class="points">
+                    <hr>
+                    <h1>EV Benefits Increase Over Time</h1>
+                    <p>The environmental benefits of electric vehicles will only get better with time. Why?</p>
+                    <div class="green-car">
+                        <img src="/All-Images/Climate-impact-images/electric-vehicles-Graas-removebg-preview.png">
+                    </div>
+                    <ul>
+                        <li>Newer models of electric vehicles are more efficient in terms of the number of miles
+                             they can drive per kilowatt-hour of electricity, and we expect this trend to continue.</li>
+                         <li>Our New England electric grid is getting greener with each passing year, thanks to laws like
+                              the Massachusetts Renewable Energy Portfolio Standard and Rhode Island Renewable Energy Standard. 
+                              They require electricity suppliers to increase their renewable energy content each year.</li>    
+                        <li>Communities in Massachusetts and Rhode Island are choosing to aggregate their electricity purchasing
+                             for ratepayers, saving money and providing the option to support the development of renewable energy
+                              beyond what is required by state law. </li>      
+                    </ul>
+                 </div>
+                </div>
+                    <div class="page-bottom-photos">
+                        <div class="grid-photo1">
+                            <img src="/All-Images/Climate-impact-images/1.png">
+                        </div>
+                        <div class="grid-photo2">
+                            <img src="/All-Images/Climate-impact-images/2.png">
+                        </div>
+                        <div class="grid-photo1">
+                            <img src="/All-Images/Climate-impact-images/3.png">
+                        </div>
+                        <div class="grid-photo2">
+                            <img src="/All-Images/Climate-impact-images/4.png" alt="">
+                        </div>
+                    </div>     
+            </div>
+                <div class="footer">
+                    <div class="container">
+                        <div class="row">
+                            <div class="footer-col-1">
+                                <h3>Download our App</h3>
+                                <p>Download App for Android and ios mobile phone.</p>
+                                <div class="app-logo">
+                                    <a href="https://play.google.com/store" target="blank"><img src="/All-images/HomePage-Images/androidlogo.png"></a>
+                                     <a href="https://www.apple.com/nz/app-store/" target="blank"><img src="/All-images/HomePage-Images/IOS-APP.svg"></a>
+                             </div>
+                            </div>
+                            <div class="footer-col-2">
+                             <img src="/All-images/HomePage-Images/footerLOGO.png" alt="">
+                             <ul>
+                                 <li><a href="/HTML/home.html">Home</a></li>
+                                 <li><a href="/HTML/whyev.html">Why EV</a></li>
+                                 <li><a href="#">Petrol</a></li>
+                                 <li><a href="#">Diesel</a></li>
+                                 <li><a href="#">Climate Impact</a></li>
+                                 <li><a href="#">About us</a></li>
+                             </ul>
+                         </div>
+                         <div class="footer-col-3">
+                             <h3>Useful links</h3>
+                             <ul>
+                                 <li><a href="https://driveelectric.org.nz/individuals/ev-models-and-where-to-buy/" target="blank">Electric Vehicles</a></li>
+                                 <li><a href="https://www.nzta.govt.nz/vehicles/clean-car-programme/clean-car-discount/" target="blank">Goverment Rebate</a></li>
+                                 <li><a href="https://genless.govt.nz/for-everyone/on-the-move/consider-electric-vehicles/why-buy-an-ev/?gclid=CjwKCAjwiY6MBhBqEiwARFSCPvXzLgKRGMYUXRllaV7OZaZcixvj_Me2bMCu1vg-0P8pDXwReReEnhoC_p0QAvD_BwE" target="blank">EV Benifits</a></li>
+                                 <li><a href="https://insideevs.com/car-lists/electric-trucks/" target="blank">Electric Trucks</a></li>
+                             </ul>
+                         </div>
+                         <div class="footer-col-4">
+                             <h3>Follow us</h3>
+                             <ul>
+                                 <li><a href="https://www.facebook.com/" target="blank">Facebook</a></li>
+                                 <li><a href="https://twitter.com/?lang=en" target="blank">Twiter</a></li>
+                                 <li><a href="https://www.instagram.com/" target="blank">Instagram</a></li>
+                                 <li><a href="https://www.youtube.com/" target="blank">Youtube</a></li>
+                             </ul>
+                         </div>
+                        </div>
+                        <hr>
+                        <p class="copyright">&#9400; Copyright 2021-This is Student Project by Harpreet Singh</p>
+                    </div>
+                </div>
 </body>
 </html>
