--- a/HTML/SharedMenu/shared-hamburger-nav.html
+++ b/HTML/SharedMenu/shared-hamburger-nav.html
@@ -2,5 +2,5 @@
 <a href="/HTML/whyev.html">Why EV</a>
 <a href="/HTML/petrol&Diesel.html">Petrol & Diesel</a>
 <a href="/HTML/climate-impact.html">Climate impact</a>
-<a href="#">News</a>
+<a href="/HTML/News.html">News</a>
 <a href="#">About us</a>
