--- a/HTML/SharedMenu/shared-nav.html
+++ b/HTML/SharedMenu/shared-nav.html
@@ -3,6 +3,6 @@
     <li><a href="/HTML/whyev.html">Why EV</a></li>
     <li><a href="/HTML/petrol&Diesel.html">Petrol & Diesel</a></li>
     <li><a href="/HTML/climate-impact.html">Climate Impact</a></li>
-    <li><a href="#">News</a></li>
+    <li><a href="/HTML/News.html">News</a></li>
     <li><a href="#">About Us</a></li>
 </ul>
