--- a/HTML/SharedMenu/shared-hamburger-nav.html
+++ b/HTML/SharedMenu/shared-hamburger-nav.html
@@ -3,4 +3,4 @@
 <a href="/HTML/petrol&Diesel.html">Petrol & Diesel</a>
 <a href="/HTML/climate-impact.html">Climate impact</a>
 <a href="/HTML/News.html">News</a>
-<a href="#">About us</a>
+<a href="/HTML/aboutus.html">About us</a>
