--- a/HTML/SharedMenu/shared-nav.html
+++ b/HTML/SharedMenu/shared-nav.html
@@ -4,5 +4,5 @@
     <li><a href="/HTML/petrol&Diesel.html">Petrol & Diesel</a></li>
     <li><a href="/HTML/climate-impact.html">Climate Impact</a></li>
     <li><a href="/HTML/News.html">News</a></li>
-    <li><a href="#">About Us</a></li>
+    <li><a href="/HTML/aboutus.html">About Us</a></li>
 </ul>
