--- a/HTML/petrol&Diesel.html
+++ b/HTML/petrol&Diesel.html
@@ -149,51 +149,7 @@
                                                                  </div>
           </div>
     </div>
-    <div class="footer">
-        <div class="container">
-            <div class="row">
-                <div class="footer-col-1">
-                    <h3>Download our App</h3>
-                    <p>Download App for Android and ios mobile phone.</p>
-                    <div class="app-logo">
-                        <a href="https://play.google.com/store" target="blank"><img src="/All-images//HomePage-Images/androidlogo.png"></a>
-                         <a href="https://www.apple.com/nz/app-store/" target="blank"><img src="/All-images//HomePage-Images/IOS-APP.svg"></a>
-                 </div>
-                </div>
-                <div class="footer-col-2">
-                 <img src="/All-images//HomePage-Images/footerLOGO.png" alt="">
-                 <ul>
-                    <li><a href="/HTML/home.html">Home</a></li>
-                    <li><a href="/HTML/whyev.html">Why EV</a></li>
-                    <li><a href="/HTML/petrol&Diesel.html">Petrol&Diesel</a></li>
-                    <li><a href="/HTML/climate-impact.html">Climate Impact</a></li>
-                    <li><a href="#">News</a></li>
-                    <li><a href="#">About us</a></li>
-                </ul>
-             </div>
-             <div class="footer-col-3">
-                 <h3>Useful links</h3>
-                 <ul>
-                     <li><a href="https://driveelectric.org.nz/individuals/ev-models-and-where-to-buy/" target="blank">Electric Vehicles</a></li>
-                     <li><a href="https://www.nzta.govt.nz/vehicles/clean-car-programme/clean-car-discount/" target="blank">Goverment Rebate</a></li>
-                     <li><a href="https://genless.govt.nz/for-everyone/on-the-move/consider-electric-vehicles/why-buy-an-ev/?gclid=CjwKCAjwiY6MBhBqEiwARFSCPvXzLgKRGMYUXRllaV7OZaZcixvj_Me2bMCu1vg-0P8pDXwReReEnhoC_p0QAvD_BwE" target="blank">EV Benifits</a></li>
-                     <li><a href="https://insideevs.com/car-lists/electric-trucks/" target="blank">Electric Trucks</a></li>
-                 </ul>
-             </div>
-             <div class="footer-col-4">
-                 <h3>Follow us</h3>
-                 <ul>
-                     <li><a href="https://www.facebook.com/" target="blank">Facebook</a></li>
-                     <li><a href="https://twitter.com/?lang=en" target="blank">Twiter</a></li>
-                     <li><a href="https://www.instagram.com/" target="blank">Instagram</a></li>
-                     <li><a href="https://www.youtube.com/" target="blank">Youtube</a></li>
-                 </ul>
-             </div>
-            </div>
-            <hr>
-            <p class="copyright">&#9400; Copyright 2021-This is Student Project by Harpreet Singh</p>
-        </div>
-    </div>
+    <main-footer></main-footer>
     
 </body>
 </html>
