--- a/HTML/News.html
+++ b/HTML/News.html
@@ -32,8 +32,8 @@
             <canvas id="MyCanvas" width="800" height="120">
           </div>
           <div class="newHeader">
-              <div class="Photos">
-                <img src="/All-Images/news-images/tesla-model-y-united-kingdom-box-removebg-preview.png" alt="photo">
+              <div class="videoFile">
+                <video width="100%" src="/All-Images/news-images/The Future Of Cars _ Electric Car Animation Video _2D Animation _ Electric Car _ The Creative Mind.mp4" controls autoplay></video>
               </div>
           </div>
           <div class="grid-news">
@@ -106,6 +106,7 @@
                 </div>
                 <div class="last"></div>
     </div>
+
     <main-footer></main-footer>
 </body>
 
