--- a/HTML/News.html
+++ b/HTML/News.html
@@ -14,7 +14,7 @@
     <title>EV Revolution|News</title>
 </head>
 <body>
-
+  <!------------Main Header and navigation ------------>
     <div class="container">
         <div class="navbar">
             <div class="logo">
@@ -29,9 +29,11 @@
             </div>
           </div> 
           <div class="canvasAnimation">
+                <!------------CANVAS animation ------------>
             <canvas id="MyCanvas" width="800" height="120">
           </div>
           <div class="newHeader">
+                <!------------Page video------------>
               <div class="videoFile">
                 <video width="100%" src="/All-Images/news-images/The Future Of Cars _ Electric Car Animation Video _2D Animation _ Electric Car _ The Creative Mind.mp4" controls autoplay></video>
               </div>
@@ -47,6 +49,7 @@
                         <p> November 14, 2021</p></a>
                     </div>
           </div>
+            <!------------News grid with photo and link to the news page------------>
           <div class="grid-news">
             <div class="photo-grid">
                 <img src="/All-Images/news-images/evgo-and-gm_100814994_h.jpg" >
@@ -106,7 +109,7 @@
                 </div>
                 <div class="last"></div>
     </div>
-
+  <!------------footer ------------>
     <main-footer></main-footer>
 </body>
 
