--- a/HTML/climate-impact.html
+++ b/HTML/climate-impact.html
@@ -14,6 +14,7 @@
     <script src="/JavaScript/nav.js"></script>
 </head>
 <body>
+      <!------------Main Header and navigation ------------>
    <div class="climate-container">
     <div class="navbar">
         <div class="logo">
@@ -26,7 +27,7 @@
         </button>
         <div class="dropdown-content" id="ham-menu"></div>
       </div>
-   
+     <!------------social media links ------------>
    <div class="page-header">
     <h1>How electric vehicles help to tackle climate change</h1>
     <div class="media">
@@ -35,12 +36,14 @@
         <h3><a href="https://www.instagram.com/?hl=en" target="blank"><i class="fa fa-instagram" style="font-size:30px"></i></a></h3>
         <h3><a href="https://www.facebook.com/" target="blank"><i class="fa fa-facebook-official" style="font-size:30px"></i></a></h3>
       </div>
+        <!------------Rotating earth animation using css------------>
       <div class="earth"></div>
    </div>
    <div class="para-one">
        <h2> Over the last decade, there’s been an increase in the purchasing of electric vehicles (EV). There are many reasons why 
         one might consider making the switch to an EV – electric cars are higher efficiency than gas-powered cars, can reduce your dependence on fossil fuels and require less maintenance than most cars.</h2>
    </div>
+     <!------------Video links and details ------------>
    <div class="video">
     <iframe class="responsive-iframe" src="https://www.youtube.com/embed/K9m9WDxmSN8" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
    </div>
@@ -79,6 +82,7 @@
                     </ul>
                  </div>
                 </div>
+                  <!------------page bottom photos using grid------------>
                     <div class="page-bottom-photos">
                         <div class="grid-photo1">
                             <img src="/All-Images/Climate-impact-images/1.png">
@@ -94,6 +98,7 @@
                         </div>
                     </div>     
             </div>
+              <!------------footer using javascript ------------>
             <main-footer></main-footer>
 </body>
 </html>
