--- a/HTML/fossilfuel.html
+++ b/HTML/fossilfuel.html
@@ -11,11 +11,11 @@
     <link rel="stylesheet" href="/CSS/Footer CSS/footer.css">
     <link rel="stylesheet" href="/CSS/Logo CSS/logo.css">
     <link rel="stylesheet" href="/CSS/Video Css/video.css">
-    <link rel="stylesheet" href="/CSS/PetrolCSS/petrol.css">
+    <link rel="stylesheet" href="/CSS/fossilfuelCSS/petrol.css">
     <script src="/JavaScript/nav.js"></script>
 </head>
 <body>
-
+  <!------------Main Header and navigation ------------>
     <div class="main-container">
         <div class="navbar">
             <div class="logo">
@@ -44,6 +44,7 @@
               <h3>The industry’s bad behavior doesn’t stop with the carbon pollution that causes 
                   climate change. Here are eight reasons why we need to phase out fossil fuels once and for all.</h3>
           </div>
+            <!------------Some deatails about current situation with photos------------>
           <div class="reasons">
               <h1>1. Fossil fuels = Climate change</h1>
                 <p>Let’s start with the basics. Burning fossil fuels like coal, oil, and gas results in carbon
@@ -149,6 +150,7 @@
                                                                  </div>
           </div>
     </div>
+      <!------------footer using javascript ------------>
     <main-footer></main-footer>
     
 </body>
