--- a/HTML/home.html
+++ b/HTML/home.html
@@ -15,6 +15,7 @@
 </head>
 
 <body>
+    <!------------Main Header and navigation ------------>
     <div class="header">
     <div class="container">
         <div class="navbar">
