--- a/HTML/aboutus.html
+++ b/HTML/aboutus.html
@@ -12,7 +12,8 @@
     <link rel="stylesheet" href="/CSS/aboutusCSS/aboutus.css">
     <script src="/JavaScript/nav.js"></script>
     <script src="https://cdn.tiny.cloud/1/y34kgnu11spmsg0tw5qk49mq9xb3g6vwk6awrye8jm4ehslo/tinymce/5/tinymce.min.js" referrerpolicy="origin"></script>
-    <script>
+     <!------------Online text editor which helps to give user custosization about text input  ------------>
+   <script>
       tinymce.init({
         selector: '#message',
         plugins: 'code',
@@ -21,6 +22,7 @@
     <title>EV Revolution|About Us</title>
 </head>
 <body>
+    <!------------Main Header and navigation ------------>
     <div class="container">
         <div class="navbar">
             <div class="logo">
@@ -41,11 +43,13 @@
           </div>
           <form action="/" method="get" class="form" id="form">
           <div class="contact-container">
+              <!------------get in touch details------------>
             <h1>Get in touch</h1>
             <p>We would love to respond to your quries and help you sucseed.<br>Feel free to get in touch with us.</p>
             <div class="contact-box">
                 <div class="contact-left">
                     <h3>Send your request</h3>
+                      <!------------html form tag and inputs------------>
                     <form>
                         <div class="input-row">
                             <div class="input-group">
@@ -114,6 +118,7 @@
             </div>
         </div>
       </form>         
+        <!------------subscribe box------------>
         <div class="subscribe">
           <p>Subscribe us here</p>
           <div class="wrapper">
@@ -126,6 +131,7 @@
             </div>
          </div>
         </div> 
+          <!------------pop message for subcription ------------>
         <div class="pop-up" id="modal">
           <div class="pop-up-message">
             <h1>Thank you <br> for subscribing for updates</h1>
@@ -134,6 +140,7 @@
             <button class="button" id="close">Done</button>
           </div>
         </div>
+          <!------------pop up message for get in touch request------------>
         <div class="pop-up" id="modal-request">
           <div class="pop-up-message">
             <h1>Your Request has been submitted successfully. We will contact you within 48 working hours.</h1>
@@ -143,8 +150,10 @@
           </div>
         </div>
     </div>
+      <!------------java script fiels for pop-up messages and validation------------>
     <script src="/JavaScript/popup.js"></script>
     <script src="/JavaScript/validation.js"></script>
+      <!------------footer ------------>
     <main-footer></main-footer>
 </body>
 </html>
