--- a/HTML/aboutus.html
+++ b/HTML/aboutus.html
@@ -13,12 +13,12 @@
     <script src="/JavaScript/nav.js"></script>
     <script src="https://cdn.tiny.cloud/1/y34kgnu11spmsg0tw5qk49mq9xb3g6vwk6awrye8jm4ehslo/tinymce/5/tinymce.min.js" referrerpolicy="origin"></script>
      <!------------Online text editor which helps to give user custosization about text input  ------------>
-   <script>
+   <!-- <script>
       tinymce.init({
         selector: '#message',
         plugins: 'code',
       });
-    </script>
+    </script> -->
     <title>EV Revolution|About Us</title>
 </head>
 <body>
@@ -53,49 +53,51 @@
                     <form>
                         <div class="input-row">
                             <div class="input-group">
-                              <label>First Name</label>
+                              <label class="labeltag">First Name</label>
                             <input type="text" id="firstName" placeholder="john" onkeyup="validate(this,`First Name cannnot be blank`)">
                             <i class="fa fa-check-circle"></i><i class="fa fa-exclamation-circle"></i> <small>Error Message</small> 
                           </div>
                           <div class="input-group">
-                              <label>Last Name</label>
+                              <label class="labeltag">Last Name</label>
                             <input type="text" id="lastName"  placeholder="Debra" onkeyup="validate(this,`Last Name cannnot be blank`)">
                             <i class="fa fa-check-circle"></i><i class="fa fa-exclamation-circle"></i> <small>Error Message</small> 
                           </div>
                         </div>
                         <div class="input-row">
                           <div class="input-group">
-                              <label>Email</label>
+                              <label class="labeltag">Email</label>
                             <input type="email" id="email" placeholder="abc@anymail.com" size="30" onkeyup="validate(this,`Email cannnot be blank`)">
                             <i class="fa fa-check-circle"></i><i class="fa fa-exclamation-circle"></i> <small>Error Message</small> 
                           </div>
                           <div class="input-group">
-                            <label>Subject</label>
+                            <label class="labeltag">Subject</label>
                           <input type="text" id="subject"  placeholder="Electric Car" onkeyup="validate(this,`Subject cannnot be blank`)">
                           <i class="fa fa-check-circle"></i><i class="fa fa-exclamation-circle"></i> <small>Error Message</small> 
                         </div>
                       </div>
                       <div class="input-row">
                         <div class="input-group">
-                            <label>Phone</label>
+                            <label class="labeltag">Phone</label>
                           <input type="number" id="phone" placeholder="+64-123456-789" onkeyup="validate(this,`Phone cannnot be blank`)">
                           <i class="fa fa-check-circle"></i><i class="fa fa-exclamation-circle"></i><small>Error Message</small> 
                         </div>
                     </div>
                     <div class="input-row">
                       <div class="input-group">
-                        <label>Message</label>
-                        <textarea id="message" placeholder="Write your message max 500 words" rows="8" maxlength="500" onkeyup="validate(this,`Message cannnot be blank`)"></textarea>
+                        <label class="labeltag">Message</label>
+                        <textarea id="message" placeholder="Write your message max 500 words"  onkeyup="validate(this,`Message cannnot be blank`)"></textarea>
                         <i class="fa fa-check-circle"></i><i class="fa fa-exclamation-circle"></i><small>Error Message</small> 
                       </div>
                   </div>
                     <button type="submit" id="send-request" class="button">Send</button>
-                    <p class="senderror" id="btnmsg">Error Message</p> 
+                    <!-- <p class="senderror" id="btnmsg">Error Message</p>  -->
                     </form>
                 </div>
                 <div class="contact-right">
-                    <h3>Reach US</h3>
-                    
+                    <h3>Reach us</h3>
+                  <div class="tableimg">
+                    <img src="/All-Images/HomePage-Images/EV Revolution.svg" alt="">
+                  </div> 
                     <table>
                         <tr>
                             <td>Email</td>
