--- a/HTML/SharedMenu/shared-nav.html
+++ b/HTML/SharedMenu/shared-nav.html
@@ -1,5 +1,5 @@
 <ul>
-    <li><a href="/HTML/home.html">Home</a></li>
+    <li><a href="/home.html">Home</a></li>
     <li><a href="/HTML/whyev.html">Why EV</a></li>
     <li><a href="/HTML/fossilfuel.html">Fossil Fuel</a></li>
     <li><a href="/HTML/climate-impact.html">Climate Impact</a></li>
