--- a/HTML/whyev.html
+++ b/HTML/whyev.html
@@ -18,7 +18,7 @@
     <div class="main-container">
         <div class="navbar">
             <div class="logo">
-                <a href="/HTML/home.html"><img src="/All-Images/HomePage-Images/EV Revolution.svg" alt="logo"></a>
+                <a href="/home.html"><img src="/All-Images/HomePage-Images/EV Revolution.svg" alt="logo"></a>
             </div>  
             <nav id="menu"></nav> 
         </div>
@@ -44,22 +44,22 @@
           <!------------photos with graphs and data ------------>
         <div class="graph">
             <div class="grid-1">
-                <img src="/All-images//WhyEV-images/NZ_Energy_Emissions_Small_ea6f443d8c.gif">
+                <img src="/All-images/WhyEV-images/nzenergy.gif">
             </div>
             <div class="grid-2">
-                <img src="/All-images//WhyEV-images/graph_Ev1.jpeg.crdownload" alt="">
+                <img src="/All-images/WhyEV-images/graph_Ev1.jpeg.crdownload" alt="">
             </div>
             <div class="grid-4">
-                <img src="/All-images//WhyEV-images/graph4.jpg"">
+                <img src="/All-images/WhyEV-images/graph4.jpg"">
             </div>
             <div class="grid-4">
-                <img src="/All-images//WhyEV-images/graph-3.jpeg.crdownload" alt="">
+                <img src="/All-images/WhyEV-images/graph-3.jpeg.crdownload" alt="">
             </div>
         </div>
         <div class="why-ev">
             <h1>Why to choose Electric Vehicles</h1>
             <div class="tesla-img">
-                <img src="/All-images//WhyEV-images/tesla-nice-removebg-preview.png" alt="">
+                <img src="/All-images/WhyEV-images/tesla-nice-removebg-preview.png" alt="">
             </div>
         </div>
           <!------------Grid layout ------------>
