--- a/HTML/News.html
+++ b/HTML/News.html
@@ -19,7 +19,7 @@
     <div class="container">
         <div class="navbar">
             <div class="logo">
-                <a href="/HTML/home.html"><img src="/All-images//HomePage-Images/EV Revolution.svg" alt="logo"></a>
+                <a href="/home.html"><img src="/All-images//HomePage-Images/EV Revolution.svg" alt="logo"></a>
             </div>  
             <nav id="menu"></nav>    
         </div>
@@ -36,7 +36,7 @@
           <div class="newHeader">
                 <!------------Page video------------>
               <div class="videoFile">
-                <video width="100%" src="/All-Images/news-images/The Future Of Cars _ Electric Car Animation Video _2D Animation _ Electric Car _ The Creative Mind.mp4" controls></video>
+                <video width="100%" src="/All-Images/news-images/videocar.mp4" controls></video>
               </div>
           </div>
           <div class="grid-news">
