--- a/home.html
+++ b/home.html
@@ -20,7 +20,7 @@
     <div class="container">
         <div class="navbar">
             <div class="logo">
-                <a href="/HTML/home.html"><img src="/All-images//HomePage-Images/EV Revolution.svg" alt="logo"></a>
+                <a href="/home.html"><img src="/All-images/HomePage-Images/EV Revolution.svg" alt="logo"></a>
             </div>  
             <nav id="menu"></nav>    
         </div>
