--- a/HTML/fossilfuel.html
+++ b/HTML/fossilfuel.html
@@ -19,7 +19,7 @@
     <div class="main-container">
         <div class="navbar">
             <div class="logo">
-                <a href="/home.html"><img src="/All-Images/HomePage-Images/EV Revolution.svg" alt="logo"></a>
+                <a href="/home.html"><img src="/All-images/HomePage-Images/mainlogo.svg" alt="logo"></a>
             </div>  
             <nav id="menu"></nav> 
         </div>
