--- a/HTML/whyev.html
+++ b/HTML/whyev.html
@@ -18,7 +18,7 @@
     <div class="main-container">
         <div class="navbar">
             <div class="logo">
-                <a href="/home.html"><img src="/All-Images/HomePage-Images/EV Revolution.svg" alt="logo"></a>
+                <a href="/home.html"><img src="/All-images/HomePage-Images/mainlogo.svg" alt="logo"></a>
             </div>  
             <nav id="menu"></nav> 
         </div>
@@ -30,7 +30,7 @@
         <div class="main-header">
                   <div class="image-grid">
                       <div class="first-img-grid">
-                        <img src="/All-images/WhyEV-images/Ev-inside-removebg-preview.png" alt="">
+                        <img src="/All-images/WhyEV-images/insideev.png" alt="">
                       </div>
                       <div class="sec-img-grid">
                         <h1>Electric vehicles (EVs) are vehicles that run on electricity and which can be plugged 
@@ -44,16 +44,16 @@
           <!------------photos with graphs and data ------------>
         <div class="graph">
             <div class="grid-1">
-                <img src="/All-images/WhyEV-images/nzenergy.gif">
+                <img src="/All-images/WhyEV-images/nzenergy.gif"alt="photo">
             </div>
             <div class="grid-2">
-                <img src="/All-images/WhyEV-images/graph_Ev1.jpeg.crdownload" alt="">
+                <img src="/All-images/WhyEV-images/graph3.jpg" alt="photo">
             </div>
             <div class="grid-4">
-                <img src="/All-images/WhyEV-images/graph4.jpg"">
+                <img src="/All-images/WhyEV-images/graph4.jpg"alt="photo">
             </div>
             <div class="grid-4">
-                <img src="/All-images/WhyEV-images/graph-3.jpeg.crdownload" alt="">
+                <img src="/All-images/WhyEV-images/convertedgraph.jpg" alt="photo">
             </div>
         </div>
         <div class="why-ev">
