--- a/HTML/aboutus.html
+++ b/HTML/aboutus.html
@@ -26,7 +26,7 @@
     <div class="container">
         <div class="navbar">
             <div class="logo">
-                <a href="/home.html"><img src="/All-images/HomePage-Images/EV Revolution.svg" alt="logo"></a>
+              <a href="/home.html"><img src="/All-images/HomePage-Images/mainlogo.svg" alt="logo"></a>
             </div> <nav id="menu"></nav></div>
         <div class="dropdown">
             <button class="dropbtn"><i style="color: #2a4e07;" class="fa fa-bars"></i></button>
