--- a/HTML/climate-impact.html
+++ b/HTML/climate-impact.html
@@ -18,8 +18,7 @@
    <div class="climate-container">
     <div class="navbar">
         <div class="logo">
-            <a href="/home.html"><img src="/All-Images/HomePage-Images/EV Revolution.svg" alt="logo"></a>
-        </div>  
+     <a href="/home.html"><img src="/All-images/HomePage-Images/mainlogo.svg" alt="logo"></a>       </div>  
         <nav id="menu"></nav> 
     </div>
     <div class="dropdown">
