--- a/home.html
+++ b/home.html
@@ -20,7 +20,7 @@
     <div class="container">
         <div class="navbar">
             <div class="logo">
-                <a href="/home.html"><img src="/All-images/HomePage-Images/EV Revolution.svg" alt="logo"></a>
+                <a href="/home.html"><img src="/All-images/HomePage-Images/mainlogo.svg" alt="logo"></a>
             </div>  
             <nav id="menu"></nav>    
         </div>
@@ -40,7 +40,7 @@
                         <a class="btn" href="/HTML/whyev.html">  Lets Start  &#x2794;  </a>
             </div>
             <div class="col-2">
-                <img src="/All-images/HomePage-Images/model-x-range-desktop-removebg-preview (1).png" alt="photo">
+                <img src="All-images/HomePage-Images/modelx.png" alt="photo">
             </div>
         </div>
         <h1>The benefits of electric vehicles</h1>
@@ -59,13 +59,13 @@
     <div class="small-container">
         <div class="row">
             <div class="col-3">
-                <img src="/All-images/HomePage-Images/cyberTruck.png" alt="photo">
+                <img src="All-images/HomePage-Images/cyberTruck.png" alt="photo">
             </div>
             <div class="col-3">
-                <img src="/All-images/HomePage-Images/EVTruck.png" alt="photo">
+                <img src="All-images/HomePage-Images/EVTruck.png" alt="photo">
             </div>
             <div class="col-3">
-                <img src="/All-images/HomePage-Images/EVVAn.png" alt="photo">
+                <img src="All-images/HomePage-Images/evvan.png" alt="photo">
             </div>
         </div>
     </div>
@@ -86,7 +86,7 @@
                         <i class="fa fa-quote-left"></i>
                         <p></i>We will not stop until every car on the road is electric.  </p>
                         <div class="quote">
-                            <img  src="/All-images/HomePage-Images/elon-musk-removebg-preview.jpg" alt="">
+                            <img  src="/All-images/HomePage-Images/elon.jpg" alt="">
                             <h3>Elon Musk</h3>   
                             <h3>Co-founder: Tesla Motors</h3>  
                         </div>
@@ -95,7 +95,7 @@
                         <i class="fa fa-quote-left"></i>
                         <p></i>The time is right for electric cars- in fact, the time is critical</p>
                         <div class="quote">
-                            <img  src="/All-images/HomePage-Images/carlos-ghosn-lead-1542635750-removebg-preview.jpg" alt="">
+                            <img  src="/All-images/HomePage-Images/carlos.jpg" alt="">
                             <h3>Carlos Ghosn</h3>   
                             <h3>Chairman: Nissan Motors</h3>    
                         </div>
@@ -106,7 +106,7 @@
                             reduce local emissions and help improve local air quality </i></p>
                         
                         <div class="quote">
-                            <img  src="/All-images/HomePage-Images/images-removebg-preview.jpg" alt="">
+                            <img  src="/All-images/HomePage-Images/kevin.jpg" alt="">
                             <h3>Kevin Emerson</h3>   
                             <h3>Book Writer</h3>    
                         </div>
@@ -120,19 +120,19 @@
                         <div class="row">
                            
                             <div class="col-5">
-                                <img src="/All-images/HomePage-Images/Nissan-logo.svg.png" alt="photo">
+                                <img src="/All-images/HomePage-Images/nissan.png" alt="photo">
                             </div>
                             <div class="col-5">
-                                <img src="/All-images/HomePage-Images/toyota-7.svg" alt="photo">
+                                <img src="/All-images/HomePage-Images/toyota.svg" alt="photo">
                             </div>
                             <div class="col-5">
                                 <img src="/All-images/HomePage-Images/teslalogo.png" alt="photo">
                             </div>
                             <div class="col-5">
-                                <img src="/All-images/HomePage-Images/audi-13.svg" alt="photo">
+                                <img src="/All-images/HomePage-Images/audi.svg" alt="photo">
                             </div>
                             <div class="col-5">
-                                <img src="/All-images/HomePage-Images/1200px-BMW.svg.png" alt="photo">
+                                <img src="/All-images/HomePage-Images/bmw.png" alt="photo">
                             </div>
                         </div>
                     </div>
